<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_margin="24dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Note"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="Title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tit"
            android:hint="Write your title"
            android:textColorHint="#454749"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:text="Description"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/desc"
            android:hint="Write your description"
            android:textColorHint="#454749"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:focusable="false"
            android:enabled="true"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"/>

    </LinearLayout>
</layout>